// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array<string> 1`] = `
Array [
  "anyof",
  Array [
    "match",
    "files/**/*.gql",
    "wholename",
  ],
  Array [
    "match",
    "files2/**/*.gql",
    "wholename",
  ],
]
`;

exports[`Object<include: Array<string>, ignore: string> 1`] = `
Array [
  "allof",
  Array [
    "anyof",
    Array [
      "match",
      "files/**/*.gql",
      "wholename",
    ],
    Array [
      "match",
      "files2/**/*gql",
      "wholename",
    ],
  ],
  Array [
    "not",
    Array [
      "match",
      "**/test/**/*.gql",
      "wholename",
    ],
  ],
]
`;

exports[`Object<include: Array<string>>: single 1`] = `
Array [
  "match",
  "files/**/*.gql",
  "wholename",
]
`;

exports[`Object<include: string> 1`] = `
Array [
  "match",
  "files/**/*.gql",
  "wholename",
]
`;

exports[`Object<match: Array<string>, ignore: Array<string>> 1`] = `
Array [
  "allof",
  Array [
    "anyof",
    Array [
      "match",
      "files/**/*.gql",
      "wholename",
    ],
    Array [
      "match",
      "files2/**/*gql",
      "wholename",
    ],
  ],
  Array [
    "not",
    Array [
      "match",
      "**/test/**/*.gql",
      "wholename",
    ],
  ],
]
`;

exports[`Object<match: Array<string>> 1`] = `
Array [
  "anyof",
  Array [
    "match",
    "files/**/*.gql",
    "wholename",
  ],
  Array [
    "match",
    "files2/**/*gql",
    "wholename",
  ],
]
`;

exports[`string 1`] = `
Array [
  "match",
  "files/**/*.gql",
  "wholename",
]
`;
